# Overlay-QLCCE

./: .gitignore  LICENSE  MANIFEST.in  QLCCE  README.md  USAGE.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  setup.py
backend/: Dockerfile  qlcce_engine.py  requirements.txt
backend/app/: __init__.py  main.py
backend/app/routes/: analysis.py  config.py
configs/: default.json
examples/: advanced_workflow.py  basic_usage.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalysisList.tsx  ConfigPanel.tsx  ResultsPanel.tsx
qlcce/: __init__.py  cli.py
qlcce/core/: __init__.py  benford_analyzer.py  chaotic_system.py  log_transform.py  quantum_field.py
qlcce/utils/: __init__.py
