[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "qlcce"
version = "1.0.0"
description = "Quantum-Logarithmic Chaotic Constraint Engine: A research environment for quantum field simulations, Benford's law analysis, and chaotic systems"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "QLCCE Contributors"}
]
keywords = ["quantum", "chaos", "benford", "logarithm", "physics", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "numba>=0.54.0",
    "sympy>=1.9",
    "matplotlib>=3.4.0",
    "ipywidgets>=7.6.0",
    "IPython>=7.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=21.0",
    "flake8>=3.9",
]

[project.scripts]
qlcce = "qlcce.cli:main"

[project.urls]
Homepage = "https://github.com/ncsound919/Overlay-QLCCE"
Repository = "https://github.com/ncsound919/Overlay-QLCCE"

[tool.setuptools]
packages = ["qlcce", "qlcce.core", "qlcce.utils"]
